# sekiro-battle-instinct

./: .gitignore  Cargo.toml  README.md  battle_instinct.cfg  battle_instinct_zh.cfg  build.bat  build.ps1  justfile  release.ps1  rustfmt.toml
res/: battle_instinct.cfg  battle_instinct_zh.cfg
src/: config.rs  core.rs  device.rs  fps.rs  frame.rs  game.rs  input.rs  lib.rs  log.rs  logger.rs
