[package]
name = "sekiro-battle-instinct"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
log = "0.4"
fern = "0.6"
chrono = "0.4"
minhook = "0.6.0"
widestring = "1.2.0"
gilrs = "0.11.0"


[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
]

[lib]
crate-type = ["cdylib"]
